--- a/public/css/main.css
+++ b/public/css/main.css
@@ -233,18 +233,7 @@ div.dataTables_wrapper div.dataTables_filter input {
     padding: 5px !important;
     border-radius: 50% !important;
 }
-/* #login .v-content{
-    background: url('storage/ps/landS.jpg') !important
-} */
-/* .link-router{
-    background: #fff !important;
-    color: rgba(28, 35, 90, 0.79) !important;
-} */
-.theme--light.v-table tbody tr {
-    /* background: linear-gradient(to bottom, rgba(52, 144, 220, 0.02), rgba(52, 144, 220, 0.12)); */
-    /* box-shadow: 0 9px 30px -6px rgba(255, 255, 255, 0.43) !important; */
-}
-/* .panel-header{height:260px;padding-top:80px;padding-bottom:45px;background:#141e30;background:linear-gradient(90deg,#0c2646,#204065 60%,#2a5788);position:relative;overflow:hidden}.panel-header .header .title{color:#fff}.panel-header .header .category{max-width:600px;color:hsla(0,0%,100%,.5);margin:0 auto;font-size:13px}.panel-header .header .category a{color:#fff}.panel-header-sm{height:135px}.panel-header-lg{height:380px}.card{border:0;border-radius:.1875rem;display:inline-block;position:relative;width:100%;margin-bottom:20px;box-shadow:0 1px 15px 1px rgba(39,39,39,.1)}.card .card-body{padding:15px 15px 10px} */
+
 
 /* width */
 ::-webkit-scrollbar {
@@ -317,4 +306,8 @@ label {
 
 .fm-navbar .btn-group .fa-question {
     display: none;
+}
+
+.theme--dark.v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined) {
+    background-color: transparent;
 }
